--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "daisyui": "^5.1.13",
+    "framer-motion": "^12.23.16",
+    "motion": "^12.23.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13"
   },
